# university-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/api/v1/: chat.py  complaints.py  documents.py  router.py  users.py
app/core/: config.py  container.py  dependencies.py  exceptions.py
app/engines/: __init__.py  base.py  factory.py  langgraph_engine.py
app/engines/langgraph/: __init__.py  engine.py
app/engines/langgraph/nodes/: __init__.py  base_node.py  classification.py  complaint_processing.py  document_search.py  response_formatting.py
app/engines/langgraph/state/: __init__.py  schemas.py  (+1 more)
app/interfaces/: conversation_engine.py  database_provider.py  llm_provider.py  storage_provider.py
app/models/: base.py  common.py  complaint.py  conversation.py  document.py  user.py
app/providers/database/: supabase_provider.py
app/providers/llm/: openai_provider.py
app/providers/storage/: supabase_storage_provider.py
app/repositories/: base.py  complaint_repository.py  conversation_repository.py  document_repository.py  user_repository.py  vector_repository.py
app/services/: complaint_service.py  conversation_service.py  document_service.py  embedding_service.py  user_service.py
app/utils/: document_processing.py  text_chunking.py
docs/: api.md  deployment.md  development.md  engine-architecture.md  engine-replication-guide.md  langgraph-explained.md  system-architecture.md
scripts/: create_admin_user.py  setup_database.py  test_api.py
(+9 files in other folders)
